2021-03-31  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* bootstrap.conf (gnulib_modules): Added vsnprintf-posix module.

2021-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-dump.pk (dump): Fix ruler and addresses for offsets >
	2^32.

2021-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_array_insert): Do not pvm_sizeof the
	whole array for each inserted element.

2021-03-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_SLEEP): Define.
	* libpoke/pkl-lex.l: Handle __PKL_BUILTIN_SLEEP__.
	* libpoke/pkl-tab.y (builtin): Rule for the sleep builtin.
	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Generate code for the
	`sleep' builtin.
	* libpoke/pkl-rt.pk (sleep): Define builtin.
	* libpoke/pvm.jitter (sleep): Do not raise an exception if
	nanosleep gets interrupted and raise E_generic whenever
	appropriate.
	* bootstrap.conf (libpoke_modules): Import the module `errno' from
	gnulib.
	* testsuite/poke.pkl/sleep-1.pk: New test.
	* testsuite/poke.pkl/sleep-2.pk: Likewise.
	* testsuite/poke.pkl/sleep-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-03-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-insn.def: New instruction PKL_INSN_SLEEP.
	* libpoke/pvm.jitter (sleep): New instruction.
	* bootstrap.conf (libpoke_modules): Import module `nanosleep'.

2021-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/btf.pk (BTF_Section): Check that the header in the
	section declares the right size.
	Use header.hdr_len instead of OFFSET.
	(BTF_Header): Use an initialization value for `magic'.

2021-03-28  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* etc/pk-mi-json-schema.json: Re-order fields. Remove `Null` object.
	Change `Mapping` to accept one required field `mapped` and three
	optional fields: `strict`, `IOS` and `offset`.
	* poke/pk-mi-json.c: Re-write the JSON to pk_val conversion.
	(jerror): New function.
	(jexpect): Likewise.
	(pvalue): Likewise.
	(pexpect): Likewise.