@@ -88,6 +88,7 @@ static struct ios *cur_io;
 /* The available backends are implemented in their own files, and
    provide the following interfaces.  */
 
+extern struct ios_dev_if ios_dev_zero; /* ios-dev-zero.c */
 extern struct ios_dev_if ios_dev_mem; /* ios-dev-mem.c */
 extern struct ios_dev_if ios_dev_file; /* ios-dev-file.c */
 extern struct ios_dev_if ios_dev_stream; /* ios-dev-stream.c */
@@ -97,6 +98,7 @@ extern struct ios_dev_if ios_dev_nbd; /* ios-dev-nbd.c */
 
 static struct ios_dev_if *ios_dev_ifs[] =
   {
+   &ios_dev_zero,
    &ios_dev_mem,
    &ios_dev_stream,
 #ifdef HAVE_LIBNBD
